--- a/public/site/css/normalize.css
+++ b/public/site/css/normalize.css
@@ -33,7 +33,7 @@ section {
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
+ * `product` contexts in Chrome, Firefox, and Safari.
  */
 
 h1 {
